[gd_scene load_steps=16 format=2]

[ext_resource path="res://Cenas/Utilitarios/popupDialogo.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cenas/Utilitarios/Hint/Hint.tscn" type="PackedScene" id=2]
[ext_resource path="res://Personagens/Jose/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cenas/Fases/Fase1/machado.tscn" type="PackedScene" id=4]
[ext_resource path="res://Cenas/Utilitarios/PopupPause.tscn" type="PackedScene" id=5]
[ext_resource path="res://Public/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Cenas/Utilitarios/Tilesets/Area1/Tileset1.tres" type="TileSet" id=7]
[ext_resource path="res://Public/Utilitarios/frame.png" type="Texture" id=8]
[ext_resource path="res://Public/roadmap.png" type="Texture" id=9]
[ext_resource path="res://Public/Utilitarios/lightFrame.png" type="Texture" id=10]
[ext_resource path="res://Cenas/Transições/Transition3.gd" type="Script" id=13]
[ext_resource path="res://Public/Sounds-effects/birds-19624.mp3" type="AudioStream" id=14]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 26.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 27 )

[node name="QuizScene" type="Node2D"]
script = ExtResource( 13 )

[node name="Grass" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 3, -65535, 0, 4, -65534, 0, 1, -65533, 0, 4, -65532, 0, 2, -65531, 0, 2, -65530, 0, 1, -65529, 0, 2, -65528, 0, 3, -65527, 0, 2, -65526, 0, 2, -65525, 0, 196610, -65524, 0, 196610, -65523, 0, 1, -65522, 0, 1, -65521, 0, 2, -65520, 0, 1, -65519, 0, 196610, -65518, 0, 2, -65517, 0, 3, -65516, 0, 3, -65515, 0, 3, -65514, 0, 1, -65513, 0, 1, -65512, 0, 4, -65511, 0, 1, -65510, 0, 4, -65509, 0, 3, -65508, 0, 196610, -65507, 0, 1, -65506, 0, 1, -65505, 0, 5, 65535, 0, 131075, 0, 0, 196612, 1, 0, 196612, 2, 0, 131076, 3, 0, 196612, 4, 0, 131076, 5, 0, 131076, 6, 0, 65540, 7, 0, 196612, 8, 0, 196612, 9, 0, 131076, 10, 0, 65540, 11, 0, 196612, 12, 0, 196612, 13, 0, 196612, 14, 0, 131076, 15, 0, 131076, 16, 0, 196612, 17, 0, 131076, 18, 0, 196612, 19, 0, 65540, 20, 0, 131076, 21, 0, 65540, 22, 0, 196612, 23, 0, 65540, 24, 0, 131076, 25, 0, 65540, 26, 0, 65540, 27, 0, 196612, 28, 0, 131076, 29, 0, 65540, 30, 0, 196612, 31, 0, 65541, 131071, 0, 131075, 65536, 0, 196612, 65537, 0, 65540, 65538, 0, 65540, 65539, 0, 196612, 65540, 0, 196612, 65541, 0, 196612, 65542, 0, 65540, 65543, 0, 131076, 65544, 0, 131076, 65545, 0, 196612, 65546, 0, 131076, 65547, 0, 65540, 65548, 0, 196612, 65549, 0, 65540, 65550, 0, 65540, 65551, 0, 131076, 65552, 0, 131076, 65553, 0, 65540, 65554, 0, 131076, 65555, 0, 131076, 65556, 0, 196612, 65557, 0, 196612, 65558, 0, 65540, 65559, 0, 65540, 65560, 0, 196612, 65561, 0, 131076, 65562, 0, 131076, 65563, 0, 65540, 65564, 0, 65540, 65565, 0, 131076, 65566, 0, 65540, 65567, 0, 196613, 196607, 0, 196608, 131072, 0, 65540, 131073, 0, 65540, 131074, 0, 196612, 131075, 0, 131076, 131076, 0, 65540, 131077, 0, 196612, 131078, 0, 65540, 131079, 0, 196612, 131080, 0, 65540, 131081, 0, 196612, 131082, 0, 131076, 131083, 0, 131076, 131084, 0, 196612, 131085, 0, 196612, 131086, 0, 196612, 131087, 0, 131076, 131088, 0, 131076, 131089, 0, 65540, 131090, 0, 131076, 131091, 0, 131076, 131092, 0, 131076, 131093, 0, 196612, 131094, 0, 65540, 131095, 0, 65540, 131096, 0, 196612, 131097, 0, 65540, 131098, 0, 65540, 131099, 0, 65540, 131100, 0, 65540, 131101, 0, 65540, 131102, 0, 131076, 131103, 0, 65541, 262143, 0, 131075, 196608, 0, 65540, 196609, 0, 196612, 196610, 0, 65540, 196611, 0, 196612, 196612, 0, 131076, 196613, 0, 65540, 196614, 0, 131076, 196615, 0, 196612, 196616, 0, 196612, 196617, 0, 65540, 196618, 0, 196612, 196619, 0, 131076, 196620, 0, 131076, 196621, 0, 65540, 196622, 0, 131076, 196623, 0, 65540, 196624, 0, 196612, 196625, 0, 196612, 196626, 0, 65540, 196627, 0, 65540, 196628, 0, 131076, 196629, 0, 65540, 196630, 0, 131076, 196631, 0, 131076, 196632, 0, 196612, 196633, 0, 131076, 196634, 0, 131076, 196635, 0, 196612, 196636, 0, 196612, 196637, 0, 196612, 196638, 0, 65540, 196639, 0, 196613, 327679, 0, 131075, 262144, 0, 65540, 262145, 0, 131076, 262146, 0, 65540, 262147, 0, 196612, 262148, 0, 196612, 262149, 0, 131076, 262150, 0, 131076, 262151, 0, 131076, 262152, 0, 131076, 262153, 0, 131076, 262154, 0, 65540, 262155, 0, 196612, 262156, 0, 131076, 262157, 0, 131076, 262158, 0, 131076, 262159, 0, 131076, 262160, 0, 196612, 262161, 0, 131076, 262162, 0, 196612, 262163, 0, 196612, 262164, 0, 65540, 262165, 0, 65540, 262166, 0, 65540, 262167, 0, 65540, 262168, 0, 65540, 262169, 0, 131076, 262170, 0, 65540, 262171, 0, 131076, 262172, 0, 65540, 262173, 0, 131076, 262174, 0, 131076, 262175, 0, 131073, 393215, 0, 131075, 327680, 0, 65540, 327681, 0, 131076, 327682, 0, 131076, 327683, 0, 65540, 327684, 0, 65540, 327685, 0, 131076, 327686, 0, 131076, 327687, 0, 196612, 327688, 0, 65540, 327689, 0, 196612, 327690, 0, 131076, 327691, 0, 131076, 327692, 0, 196612, 327693, 0, 196612, 327694, 0, 196612, 327695, 0, 196612, 327696, 0, 196612, 327697, 0, 196612, 327698, 0, 196612, 327699, 0, 131076, 327700, 0, 65540, 327701, 0, 196612, 327702, 0, 65540, 327703, 0, 65540, 327704, 0, 65540, 327705, 0, 196612, 327706, 0, 65540, 327707, 0, 131076, 327708, 0, 65540, 327709, 0, 131076, 327710, 0, 65540, 327711, 0, 65541, 458751, 0, 131072, 393216, 0, 65540, 393217, 0, 196612, 393218, 0, 196612, 393219, 0, 65540, 393220, 0, 65540, 393221, 0, 65540, 393222, 0, 65540, 393223, 0, 65540, 393224, 0, 196612, 393225, 0, 131076, 393226, 0, 65540, 393227, 0, 196612, 393228, 0, 65540, 393229, 0, 196612, 393230, 0, 131076, 393231, 0, 131076, 393232, 0, 196612, 393233, 0, 65540, 393234, 0, 131076, 393235, 0, 131076, 393236, 0, 65540, 393237, 0, 196612, 393238, 0, 65540, 393239, 0, 196612, 393240, 0, 131076, 393241, 0, 131076, 393242, 0, 196612, 393243, 0, 196612, 393244, 0, 65540, 393245, 0, 196612, 393246, 0, 65540, 393247, 0, 196613, 524287, 0, 131072, 458752, 0, 65540, 458753, 0, 196612, 458754, 0, 196612, 458755, 0, 65540, 458756, 0, 65540, 458757, 0, 131076, 458758, 0, 65540, 458759, 0, 65540, 458760, 0, 65540, 458761, 0, 196612, 458762, 0, 196612, 458763, 0, 65540, 458764, 0, 65540, 458765, 0, 65540, 458766, 0, 196612, 458767, 0, 65540, 458768, 0, 65540, 458769, 0, 196612, 458770, 0, 131076, 458771, 0, 196612, 458772, 0, 131076, 458773, 0, 65540, 458774, 0, 196612, 458775, 0, 196612, 458776, 0, 196612, 458777, 0, 196612, 458778, 0, 65540, 458779, 0, 65540, 458780, 0, 65540, 458781, 0, 131076, 458782, 0, 196612, 458783, 0, 65541, 589823, 0, 131072, 524288, 0, 196612, 524289, 0, 65540, 524290, 0, 65540, 524291, 0, 65540, 524292, 0, 65540, 524293, 0, 131076, 524294, 0, 196612, 524295, 0, 65540, 524296, 0, 65540, 524297, 0, 131076, 524298, 0, 65540, 524299, 0, 65540, 524300, 0, 196612, 524301, 0, 131076, 524302, 0, 65540, 524303, 0, 131076, 524304, 0, 65540, 524305, 0, 196612, 524306, 0, 65540, 524307, 0, 65540, 524308, 0, 131076, 524309, 0, 65540, 524310, 0, 65540, 524311, 0, 65540, 524312, 0, 131076, 524313, 0, 131076, 524314, 0, 131076, 524315, 0, 196612, 524316, 0, 131076, 524317, 0, 196612, 524318, 0, 196612, 524319, 0, 65541, 655359, 0, 131072, 589824, 0, 196612, 589825, 0, 65540, 589826, 0, 131076, 589827, 0, 131076, 589828, 0, 196612, 589829, 0, 196612, 589830, 0, 131076, 589831, 0, 196612, 589832, 0, 131076, 589833, 0, 65540, 589834, 0, 65540, 589835, 0, 65540, 589836, 0, 196612, 589837, 0, 196612, 589838, 0, 65540, 589839, 0, 65540, 589840, 0, 131076, 589841, 0, 196612, 589842, 0, 196612, 589843, 0, 65540, 589844, 0, 65540, 589845, 0, 196612, 589846, 0, 65540, 589847, 0, 196612, 589848, 0, 131076, 589849, 0, 131076, 589850, 0, 196612, 589851, 0, 65540, 589852, 0, 131076, 589853, 0, 131076, 589854, 0, 65540, 589855, 0, 196613, 720895, 0, 196608, 655360, 0, 131076, 655361, 0, 131076, 655362, 0, 131076, 655363, 0, 131076, 655364, 0, 196612, 655365, 0, 196612, 655366, 0, 131076, 655367, 0, 196612, 655368, 0, 196612, 655369, 0, 196612, 655370, 0, 65540, 655371, 0, 196612, 655372, 0, 131076, 655373, 0, 65540, 655374, 0, 131076, 655375, 0, 196612, 655376, 0, 65540, 655377, 0, 196612, 655378, 0, 196612, 655379, 0, 131076, 655380, 0, 65540, 655381, 0, 131076, 655382, 0, 196612, 655383, 0, 196612, 655384, 0, 65540, 655385, 0, 131076, 655386, 0, 131076, 655387, 0, 131076, 655388, 0, 196612, 655389, 0, 196612, 655390, 0, 196612, 655391, 0, 65541, 786431, 0, 196608, 720896, 0, 65540, 720897, 0, 196612, 720898, 0, 131076, 720899, 0, 196612, 720900, 0, 196612, 720901, 0, 65540, 720902, 0, 196612, 720903, 0, 196612, 720904, 0, 65540, 720905, 0, 196612, 720906, 0, 131076, 720907, 0, 196612, 720908, 0, 196612, 720909, 0, 196612, 720910, 0, 65540, 720911, 0, 65540, 720912, 0, 196612, 720913, 0, 65540, 720914, 0, 196612, 720915, 0, 131076, 720916, 0, 131076, 720917, 0, 196612, 720918, 0, 196612, 720919, 0, 131076, 720920, 0, 196612, 720921, 0, 131076, 720922, 0, 65540, 720923, 0, 65540, 720924, 0, 131076, 720925, 0, 196612, 720926, 0, 131076, 720927, 0, 131073, 851967, 0, 131075, 786432, 0, 196612, 786433, 0, 196612, 786434, 0, 196612, 786435, 0, 131076, 786436, 0, 196612, 786437, 0, 131076, 786438, 0, 196612, 786439, 0, 131076, 786440, 0, 131076, 786441, 0, 131076, 786442, 0, 196612, 786443, 0, 196612, 786444, 0, 196612, 786445, 0, 65540, 786446, 0, 131076, 786447, 0, 65540, 786448, 0, 196612, 786449, 0, 196612, 786450, 0, 131076, 786451, 0, 65540, 786452, 0, 131076, 786453, 0, 131076, 786454, 0, 131076, 786455, 0, 131076, 786456, 0, 131076, 786457, 0, 131076, 786458, 0, 65540, 786459, 0, 65540, 786460, 0, 65540, 786461, 0, 65540, 786462, 0, 65540, 786463, 0, 131077, 917503, 0, 65536, 851968, 0, 196612, 851969, 0, 131076, 851970, 0, 131076, 851971, 0, 196612, 851972, 0, 196612, 851973, 0, 65540, 851974, 0, 196612, 851975, 0, 131076, 851976, 0, 131076, 851977, 0, 196612, 851978, 0, 196612, 851979, 0, 65540, 851980, 0, 131076, 851981, 0, 196612, 851982, 0, 65540, 851983, 0, 196612, 851984, 0, 196612, 851985, 0, 131076, 851986, 0, 131076, 851987, 0, 196612, 851988, 0, 65540, 851989, 0, 65540, 851990, 0, 196612, 851991, 0, 196612, 851992, 0, 131076, 851993, 0, 131076, 851994, 0, 196612, 851995, 0, 131076, 851996, 0, 196612, 851997, 0, 65540, 851998, 0, 131076, 851999, 0, 131077, 983039, 0, 262144, 917504, 0, 262146, 917505, 0, 262147, 917506, 0, 262145, 917507, 0, 262148, 917508, 0, 262146, 917509, 0, 262148, 917510, 0, 65538, 917511, 0, 65538, 917512, 0, 262145, 917513, 0, 262146, 917514, 0, 262145, 917515, 0, 262147, 917516, 0, 262148, 917517, 0, 262145, 917518, 0, 262145, 917519, 0, 65538, 917520, 0, 65538, 917521, 0, 65538, 917522, 0, 262147, 917523, 0, 262147, 917524, 0, 262146, 917525, 0, 262148, 917526, 0, 262146, 917527, 0, 65538, 917528, 0, 262148, 917529, 0, 262146, 917530, 0, 262147, 917531, 0, 262145, 917532, 0, 65538, 917533, 0, 262145, 917534, 0, 262147, 917535, 0, 262149 )

[node name="Path" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 393215, 1, 262145, 327680, 1, 262152, 327681, 1, 262146, 327682, 1, 262152, 327683, 1, 262152, 327684, 1, 262147, 327685, 1, 262152, 327686, 1, 262146, 327687, 1, 262152, 327688, 1, 262147, 327689, 1, 262146, 327690, 1, 262146, 327691, 1, 262147, 327692, 1, 262147, 327693, 1, 262152, 327694, 1, 262146, 327695, 1, 262147, 327696, 1, 262152, 327697, 1, 262146, 327698, 1, 262152, 327699, 1, 262146, 327700, 1, 262146, 327701, 1, 262152, 327702, 1, 262147, 327703, 1, 262147, 327704, 1, 262152, 327705, 1, 262147, 327706, 1, 262146, 327707, 1, 262147, 327708, 1, 262146, 327709, 1, 262152, 327710, 1, 262147, 327711, 1, 262153, 458751, 1, 327687, 393216, 1, 327688, 393217, 1, 327683, 393218, 1, 65544, 393219, 1, 327688, 393220, 1, 327683, 393221, 1, 327683, 393222, 1, 327688, 393223, 1, 65544, 393224, 1, 65544, 393225, 1, 65544, 393226, 1, 327683, 393227, 1, 65544, 393228, 1, 327688, 393229, 1, 327688, 393230, 1, 327683, 393231, 1, 327688, 393232, 1, 327688, 393233, 1, 327688, 393234, 1, 65544, 393235, 1, 65544, 393236, 1, 327688, 393237, 1, 327683, 393238, 1, 327688, 393239, 1, 327683, 393240, 1, 327688, 393241, 1, 65544, 393242, 1, 327688, 393243, 1, 65544, 393244, 1, 65544, 393245, 1, 327688, 393246, 1, 65544, 393247, 1, 327689, 524287, 1, 327687, 458752, 1, 327688, 458753, 1, 65544, 458754, 1, 327688, 458755, 1, 65544, 458756, 1, 327683, 458757, 1, 65544, 458758, 1, 327688, 458759, 1, 327688, 458760, 1, 327688, 458761, 1, 327688, 458762, 1, 65544, 458763, 1, 327688, 458764, 1, 327688, 458765, 1, 65544, 458766, 1, 327688, 458767, 1, 327688, 458768, 1, 327688, 458769, 1, 327688, 458770, 1, 327683, 458771, 1, 65544, 458772, 1, 65544, 458773, 1, 65544, 458774, 1, 327683, 458775, 1, 327688, 458776, 1, 327688, 458777, 1, 327683, 458778, 1, 65544, 458779, 1, 327683, 458780, 1, 327688, 458781, 1, 327688, 458782, 1, 327683, 458783, 1, 327689, 589823, 1, 393223, 524288, 1, 393224, 524289, 1, 393224, 524290, 1, 393224, 524291, 1, 393224, 524292, 1, 393224, 524293, 1, 393224, 524294, 1, 393224, 524295, 1, 393224, 524296, 1, 393224, 524297, 1, 393224, 524298, 1, 393224, 524299, 1, 393224, 524300, 1, 393224, 524301, 1, 393224, 524302, 1, 393224, 524303, 1, 393224, 524304, 1, 393224, 524305, 1, 393224, 524306, 1, 393224, 524307, 1, 393224, 524308, 1, 393224, 524309, 1, 393224, 524310, 1, 393224, 524311, 1, 393224, 524312, 1, 393224, 524313, 1, 393224, 524314, 1, 393224, 524315, 1, 393224, 524316, 1, 393224, 524317, 1, 393224, 524318, 1, 393224, 524319, 1, 393225 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 48, 99 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 50, 10.0001 )
scale = Vector2( 0.203252, 0.268816 )
current = true
zoom = Vector2( 0.3, 0.3 )
limit_left = 0
limit_top = 0
limit_right = 500
limit_bottom = 225
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="CanvasLayer" type="CanvasLayer" parent="Player/Camera2D"]

[node name="PopupDialog" parent="Player/Camera2D/CanvasLayer" instance=ExtResource( 1 )]

[node name="Hint" parent="Player/Camera2D/CanvasLayer" instance=ExtResource( 2 )]
visible = true

[node name="WeaponFrame" type="TextureRect" parent="Player/Camera2D/CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 23.0
margin_top = -134.0
margin_right = 55.0
margin_bottom = -102.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 8 )

[node name="Machado" parent="Player/Camera2D/CanvasLayer/WeaponFrame" instance=ExtResource( 4 )]
margin_left = 8.25
margin_top = 10.25
margin_right = 8.25
margin_bottom = 10.25
rect_scale = Vector2( 0.2, 0.2 )

[node name="DimensionFrame" type="TextureRect" parent="Player/Camera2D/CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -80.0
margin_right = -48.0
margin_bottom = 32.0
rect_scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 10 )

[node name="Roadmap" type="Sprite" parent="Player/Camera2D/CanvasLayer/DimensionFrame"]
position = Vector2( 8, 8 )
scale = Vector2( 0.0266667, 0.0340425 )
texture = ExtResource( 9 )
centered = false

[node name="Label" type="Label" parent="Player/Camera2D/CanvasLayer/DimensionFrame"]
margin_top = 25.0
margin_right = 45.0
margin_bottom = 38.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 1 )
text = "Roadmap"
align = 1
valign = 1
autowrap = true

[node name="PopupPause" parent="Player/Camera2D/CanvasLayer" instance=ExtResource( 5 )]

[node name="Trees & Others" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -196593, 5, 0, -196588, 5, 0, -131060, 5, 0, -131055, 5, 0, -131048, 5, 0, -65528, 6, 0, -65509, 5, 0, 3, 8, 0, 9, 9, 0, 11, 4, 0, 12, 5, 0, 14, 5, 0, 18, 5, 0, 22, 5, 0, 65537, 4, 0, 65538, 6, 0, 65541, 4, 0, 65546, 6, 0, 65561, 5, 0, 65565, 5, 0, 131072, 9, 0, 131077, 9, 0, 131079, 6, 0, 131090, 8, 0, 131094, 8, 0, 196609, 4, 0, 196614, 8, 0, 196618, 9, 0, 196619, 4, 0, 196625, 9, 0, 196629, 9, 0, 196637, 8, 0, 196638, 4, 0, 458763, 5, 0, 458780, 5, 0, 524306, 5, 0, 524310, 5, 0, 589831, 6, 0, 589833, 5, 0, 589837, 5, 0, 589842, 4, 0, 589846, 9, 0, 589848, 5, 0, 589853, 5, 0, 655361, 9, 0, 655362, 6, 0, 655365, 4, 0, 655367, 9, 0, 655376, 5, 0, 655382, 8, 0, 655388, 4, 0, 720900, 8, 0, 720907, 5, 0, 720917, 5, 0, 720923, 5, 0, 786436, 6, 0, 786439, 4, 0, 786440, 5, 0, 786447, 9, 0, 786452, 8, 0, 786459, 8, 0, 851969, 4, 0, 851975, 9, 0, 851984, 5, 0, 851988, 9, 0, 851992, 5, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 6, 84, 6, 88, 424, 87, 424, 145, 6, 144, 6, 77, -1, 77, -1, 154, 442, 153, 440, 67, 13, 67 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
volume_db = -5.0
autoplay = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 170, 117 )
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 310, 116 )
shape = SubResource( 3 )

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_entered" from="Area2D2" to="." method="_on_Area2D2_area_shape_entered"]
